--- a/frontend/src/app/reservations/reservations-main/reservations-main.component.html
+++ b/frontend/src/app/reservations/reservations-main/reservations-main.component.html
@@ -1,4 +1,7 @@
 <div class="row ms-3 me-5">
+    <div class="d-flex justify-content-center p-2">
+        <h2>Welcome, {{ greetingUser }} </h2>
+    </div>
     <ul class="nav nav-pills justify-content-start">
         <li class="nav-item">
             <a class="nav-link" [class.active]="navActive === 'add-form'"
